# kernel

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  serial.rs  vga_text.rs
src/graphics/: colors.rs  mod.rs  shapes.rs  vga.rs
tests/: basic_boot.rs
