[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = [ "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none" ]
test-timeout = 120
test-success-exit-code = 33

[dependencies]
bootloader = "0.9"
volatile = "0.2"
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.5"
x86_64 = "0.14"
uart_16550 = "0.2"
libm = "0.2"
